# juce_experiment

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  install_packages.sh
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/gui/: MainComponent.cpp  MainComponent.h
test/: CMakeLists.txt
test/regression/: CMakeLists.txt  conftest.py  kill_process.ps1  requirements.txt
test/regression/sample/: test_sample.py
test/unittest/: CMakeLists.txt
